--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  line-height: 1.4rem; /* Arranges buttons better */ 
+  line-height: 1.4rem; /* Arranges buttons better */
 }
 
 a {
@@ -23,37 +23,65 @@ p {
 
 /* Utility Classes */
 
+.container {
+  max-width: 1100px;
+  margin: auto;
+  padding: 0 2rem;
+  overflow: hidden;
+}
+
+.text-center {
+  text-align: center;
+}
 .text-primary {
   color: #93cb52;
 }
 
 .l-heading {
-    font-size: 4rem;
-    margin-bottom: 0.75rem;
-    line-height: 1.1;
+  font-size: 4rem;
+  margin-bottom: 0.75rem;
+  line-height: 1.1;
 }
 
-.lead{
-    font-size: 1.3rem;
-    margin-bottom: 2rem;
+.m-heading {
+  font-size: 2rem;
+  margin-bottom: 0.75rem;
+  line-height: 1.1;
+}
+
+.lead {
+  font-size: 1.3rem;
+  margin-bottom: 2rem;
 }
 
 .btn {
-    display: inline-block;
-    color: #fff;
-    background: #93cb52;
-    padding: 0.5rem 2rem;
-    border: none;
-    border-radius: 0.5rem;
+  display: inline-block;
+  color: #fff;
+  background: #93cb52;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 0.5rem;
 }
 
 .btn:hover {
-    background: #7ab436
+  background: #7ab436;
 }
 
 .btn-dark {
-    background: #333;
-    color: #fff;
+  background: #333;
+  color: #fff;
+}
+
+.py-1 {
+  padding: 1.5rem;
+}
+
+.py-2 {
+  padding: 2rem;
+}
+
+.py-3 {
+  padding: 3rem;
 }
 
 /* navbar */
@@ -101,11 +129,31 @@ p {
   align-items: center;
   /* To make the showcase-content have the heigth of the showcase.. Helps also aligning vertically(center)*/
   height: 100%;
-  width: 100%;
   padding: 0 2rem;
   /* Overlay */
   position: absolute;
   top: 56px;
+  right: 0;
+  bottom: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.4);
+}
+
+/* Section: What We Do */
+
+.items {
+  display: flex;
+  padding: 1rem;
+}
+
+#what .items .item {
+  flex: 1;
+  text-align: center;
+  padding: 1rem;
+}
+
+#what .items .item i {
+  background: #93cb52;
+  padding: 1rem;
+  border-radius: 50%;
 }
