--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,16 @@ p {
   color: #93cb52;
 }
 
+.bg-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-dark {
+  background: #333;
+  color: #fff;
+}
+
 .l-heading {
   font-size: 4rem;
   margin-bottom: 0.75rem;
@@ -72,15 +82,33 @@ p {
   color: #fff;
 }
 
+.list {
+  margin: 0.5rem 0;
+  list-style: none;
+}
+
+.list li {
+  padding: 0.5rem 0;
+  border-bottom: #444 dotted 1px;
+}
+
 .py-1 {
+  padding: 1.5rem 0;
+}
+.py-2 {
+  padding: 2rem 0;
+}
+.py-3 {
+  padding: 3rem 0;
+}
+
+.p-1 {
   padding: 1.5rem;
 }
-
-.py-2 {
+.p-2 {
   padding: 2rem;
 }
-
-.py-3 {
+.p-3 {
   padding: 3rem;
 }
 
@@ -156,4 +184,29 @@ p {
   background: #93cb52;
   padding: 1rem;
   border-radius: 50%;
+}
+
+/* section Who We Are */
+
+#who {
+  display: flex;
+}
+
+#who div {
+  flex: 1;
+}
+
+#who .who-img {
+  background: url("../img/people.jpg") no-repeat center center/cover;
+}
+
+/* Clients */
+#clients .items {
+  display: flex;
+}
+
+#clients .items img {
+  display: block;
+  margin: auto;
+  width: 60%;
 }
