--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,11 @@ p {
   color: #fff;
 }
 
+.bg-primary {
+  background: #93cb52;
+  color: #fff;
+}
+
 .l-heading {
   font-size: 4rem;
   margin-bottom: 0.75rem;
@@ -200,7 +205,7 @@ p {
   background: url("../img/people.jpg") no-repeat center center/cover;
 }
 
-/* Clients */
+/* Section: Clients */
 #clients .items {
   display: flex;
 }
@@ -209,4 +214,29 @@ p {
   display: block;
   margin: auto;
   width: 60%;
+}
+
+/* Section: Contact */
+
+#contact {
+  display: flex;
+}
+
+#contact #map,
+#contact .contact-form {
+  flex: 1;
+}
+
+#contact .contact-form .form-group {
+  margin: 0.75rem;
+}
+
+#contact .contact-form {
+  display: block;
+}
+
+#contact .contact-form input,
+#contact .contactform textarea {
+  width: 100%;
+  padding: 0.5rem;
 }
